# team-orchestrator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_imports.py  test_pipeline.py
api/: .env.example  auth.py  middleware.py  routes.py  schemas.py  server.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  AppRouter.jsx  index.css
dashboard/src/__tests__/: setup.js
dashboard/src/__tests__/api/: client.test.js
dashboard/src/__tests__/components/: Badge.test.jsx  GlassCard.test.jsx  Tabs.test.jsx
dashboard/src/__tests__/context/: AppContext.test.jsx  ThemeContext.test.jsx
dashboard/src/__tests__/views/: AdminOverview.test.jsx  ExportReports.test.jsx  Leaderboard.test.jsx  NLQuery.test.jsx
dashboard/src/api/: client.js
dashboard/src/components/: BackgroundScene.jsx  CommandPalette.jsx  Toast.jsx
dashboard/src/components/chat/: ChatHub.jsx  GlobalChat.jsx
dashboard/src/components/docs/: PipelineDiagram.jsx  ProjectStructureDiagram.jsx  TreeDiagram.jsx  WorkflowDiagram.jsx
dashboard/src/components/layout/: FeedbackThread.jsx  GlassCard.jsx  Layout.jsx  Sidebar.jsx
dashboard/src/components/ui/: FilterSortBar.jsx  Tabs.jsx  TiltCard.jsx  components.jsx
dashboard/src/context/: AppContext.jsx  SidebarContext.jsx  ThemeContext.jsx
dashboard/src/views/: AdminOverview.jsx  DocumentationPage.jsx  LandingPage.jsx  LoginPage.jsx  ProfileView.jsx  ProjectDashboard.jsx  SelectReposPage.jsx
dashboard/src/views/sections/: ActivityFeed.jsx  Analytics.jsx  CommitDetailModal.jsx  CommitHeatmap.jsx  ContributorMessages.jsx  DeepDive.jsx  ExportReports.jsx  FeedbackCoach.jsx  Leaderboard.jsx  NLQuery.jsx  TeamHealth.jsx  TeamOverview.jsx
data/: .audit_log.jsonl  .encryption_key  .integrity_key
prompts/: __init__.py  commit_analysis.txt
prompts/rubrics/: code_quality.json
src/: aggregator.py  analyzer.py  cli.py  dashboard.py  extractor.py  feedback_coach.py  indexer.py  preprocessor.py  project_store.py  report_generator.py  security.py  utils.py
tests/: conftest.py  test_api_routes.py  test_auth.py  test_middleware.py  test_project_store.py  test_schemas.py
