[project]
name = "team-orchestrator"
version = "1.0.0"
description = "AI-Powered Peer Feedback Coach for STEM Outputs — Privacy-first contribution analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["git", "ai", "contribution", "peer-feedback", "ollama", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython",
    "langchain",
    "langchain-ollama",
    "llama-index",
    "llama-index-llms-ollama",
    "llama-index-embeddings-ollama",
    "pandas",
    "streamlit",
    "plotly",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "cryptography",
    "requests",
    "python-dotenv",
    "PyJWT",
]

[project.scripts]
team-orchestrator = "src.cli:main"

[project.urls]
Homepage = "https://github.com/tejashvikumawat/14_Git_Hooks"
Repository = "https://github.com/tejashvikumawat/14_Git_Hooks"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "api*", "prompts*"]

[tool.setuptools.package-data]
prompts = ["*.txt", "rubrics/*.json"]
